--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,11 @@
 ---
-import Title from './Title.astro';
+import Logo from './Logo.astro';
 import Nav from './Nav.astro';
 const { current = '' } = Astro.props;
 ---
 
 <header>
-	
-	<Title />
+	<Logo />
 	<Nav current={current} />
 
 </header>
